# gooroom-indicator-applet

./: Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  apps.gooroom-indicator-applet.gschema.xml.in.in  kr.gooroom.IndicatorApplet.panel-applet.in.in
debian/: changelog  control  copyright  rules
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  gooroom-indicator-applet.c  gooroom-indicator-applet.h  indicator-applet-module.c  indicator-applet.c  indicator-applet.h  indicator-button.c  indicator-button.h
